--- a/angular.json
+++ b/angular.json
@@ -88,6 +88,9 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "port": 3333
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
