--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-prod": "ng build --outputPath=../producionApp/fora-poligrafia",
+    "build-prod": "ng build --output-path=../producionApp/fora-poligrafia",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
